[package]
name = "rusty_rhythm"
version = "0.1.0"
edition = "2021"
authors = ["Travis Pandos <travis.pandos@gmail.com>"]
description = "A rhythm game built in Rust using the Bevy game engine"
license = "MIT"
repository = "https://github.com/tora-pan/rusty_rhythm"

[dependencies]
bevy = "0.14"
bevy_kira_audio = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional dependencies for development
[dev-dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
